--- a/kindconfig.yaml
+++ b/kindconfig.yaml
@@ -3,6 +3,12 @@ apiVersion: kind.x-k8s.io/v1alpha4
 name: subject86
 nodes:
  - role: control-plane
+   extraMounts:
+   - hostPath: /opt/cni/bin
+     containerPath: /opt/cni/bin
+     readOnly: true
+     selinuxRelabel: false
+     propagation: HostToContainer
    kubeadmConfigPatches:
    - |
      kind: ClusterConfiguration
@@ -16,9 +22,22 @@ nodes:
            - "108.210.132.98"
            - "k8s.subject86.com"
  - role: worker
+   extraMounts:
+   - hostPath: /opt/cni/bin
+     containerPath: /opt/cni/bin
+     readOnly: true
+     selinuxRelabel: false
+     propagation: HostToContainer
  - role: worker
+   extraMounts:
+   - hostPath: /opt/cni/bin
+     containerPath: /opt/cni/bin
+     readOnly: true
+     selinuxRelabel: false
+     propagation: HostToContainer
 networking:
   apiServerAddress: "127.0.0.1"
   podSubnet: "10.220.0.0/16"
   serviceSubnet: "10.112.0.0/12"
   kubeProxyMode: "ipvs"
+  disableDefaultCNI: true
